--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <h1>UserPFP</h1>
     <img id="headerImage" src="" alt="Random Image">
     <script>
-        // Fetch a random image from the Shiggy.fun API and set it as the header image
-        fetch('https://shiggy.fun/api/random')
+        // Construct the URL with additional parameters
+        const apiUrl = 'https://shiggy.fun/api/v3/random?aspect-ratio=1&aspect-ratio-variance=0.04&nhdfghdsyfewfwfefh';
+
+        // Fetch the random image from the modified API URL
+        fetch(apiUrl)
             .then(response => response.json())
             .then(data => {
                 const headerImage = document.getElementById('headerImage');
