--- a/index.html
+++ b/index.html
@@ -4,14 +4,27 @@
     <title>UserPFP Header</title>
     <style>
         body {
-            background-image: url('https://shiggy.fun/api/v3/random?aspect-ratio=1&aspect-ratio-variance=0.04&nhdfghdsyfewfwfefh');
-            background-size: cover; /* Adjust to fit your layout */
-            /* Other background styling properties can be added here */
+            margin: 0;
+            padding: 0;
+            background: url('https://shiggy.fun/api/v3/random?aspect-ratio=1&aspect-ratio-variance=0.04&nhdfghdsyfewfwfefh') center/cover no-repeat fixed;
+            height: 100vh; /* Make the header cover the viewport height */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+
+        h1 {
+            font-family: Arial, sans-serif; /* Use a preferred font-family here */
+            font-size: 36px; /* Adjust the font size as needed */
+            color: white; /* Text color */
+            background-color: rgba(0, 0, 0, 0.5); /* Background color with transparency */
+            padding: 20px; /* Padding around the text */
+            border-radius: 10px; /* Rounded corners */
         }
     </style>
 </head>
 <body>
     <h1>UserPFP</h1>
-    <!-- Your content goes here -->
 </body>
 </html>
