--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             left: 0;
             width: 100%;
             height: 0;
-            background-image: url('https://shiggy.fun/api/v3/random?aspect-ratio=1&aspect-ratio-variance=0.04&nhdfghdsyfewfwfefh'); /* Replace with your image URL */
+            background-image: url('https://via.placeholder.com/1920x1080'); /* Replace with your image URL */
             background-size: cover;
             background-position: center;
             overflow: hidden;
