--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif; /* Adjust the font family as needed */
+            font-family: Arial, sans-serif;
+            overflow: hidden; /* Hide scrollbars */
         }
 
         .header {
