--- a/index.html
+++ b/index.html
@@ -1,59 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>UserPFP Header</title>
+    <title>Your Page Title</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            overflow: hidden; /* Hide scrollbars */
-        }
-
+        /* Styling for the header */
         .header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 0;
-            background-image: url('https://via.placeholder.com/1920x1080'); /* Replace with your image URL */
-            background-size: cover;
-            background-position: center;
-            overflow: hidden;
-            transition: height 0.5s;
-        }
-
-        .header h1 {
-            color: white;
+            background-color: #333;
+            color: #fff;
             text-align: center;
             padding: 20px;
-            font-size: 24px; /* Adjust the font size as needed */
-            background-color: rgba(0, 0, 0, 0.7);
         }
-
-        /* Add some space for content when header is folded down */
-        .content {
-            padding-top: 100px; /* Adjust the value to your liking */
+        
+        /* Styling for the widget */
+        .widget {
+            background-color: #eee;
+            padding: 20px;
         }
     </style>
 </head>
 <body>
-    <div class="header" id="header">
-        <h1>UserPFP</h1>
+    <div class="header">
+        <h1>Your Header Title</h1>
     </div>
-    <div class="content">
-        <!-- Your website content goes here -->
+    <div class="widget">
+        <!-- Your widget content goes here -->
+        <iframe src="https://yeetov.github.io/website/widget.html" width="100%" height="500" frameborder="0"></iframe>
     </div>
-
-    <script>
-        window.addEventListener('scroll', function() {
-            var header = document.getElementById('header');
-            if (window.scrollY > 50) { // Adjust the scroll threshold as needed
-                header.style.height = '100px'; // Adjust the height when folded down
-            } else {
-                header.style.height = '0';
-            }
-        });
-    </script>
 </body>
 </html>
