--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
         /* Styling for the widget */
         .widget {
             background-color: #eee;
-            padding: 20px;
+            padding: 10px;
         }
     </style>
 </head>
 <body>
     <div class="header">
-        <h1>Your Header Title</h1>
+        <h1>USERPFP</h1>
     </div>
     <div class="widget">
         <!-- Your widget content goes here -->
-        <iframe src="https://yeetov.github.io/website/widget.html" width="100%" height="500" frameborder="0"></iframe>
+        <iframe src="https://yeetov.github.io/website/widget.html" width="100%" height="100" frameborder="0"></iframe>
     </div>
 </body>
 </html>
