--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Your Page Title</title>
+    <title>UserPFP</title>
     <style>
         /* Styling for the header */
         .header {
@@ -24,7 +24,7 @@
     </div>
     <div class="widget">
         <!-- Your widget content goes here -->
-        <iframe src="https://yeetov.github.io/website/widget.html" width="100%" height="100" frameborder="0"></iframe>
+        <iframe src="https://yeetov.github.io/website/widget.html" width="100%" height="140" frameborder="0"></iframe>
     </div>
 </body>
 </html>
