--- a/widget.html
+++ b/widget.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Images Background</title>
+    <title>You Shouldn't Be Here!</title>
     <style>
         body {
             margin: 10px;
@@ -131,7 +131,7 @@
             const gifURLs = await getValidGifURLs();
             shuffleArray(gifURLs); // Shuffle the GIF URLs in random order
 
-            const numGifsToShow = 6; // Change this value to display a different number of GIFs at a time
+            const numGifsToShow = 7; // Change this value to display a different number of GIFs at a time
             const gifURLsToShow = gifURLs.slice(0, numGifsToShow);
 
             addMovingImagesToContainer(gifURLsToShow, containerElement);
