--- a/widget.html
+++ b/widget.html
@@ -1,96 +1,144 @@
-<script>
-    // Function to fetch and extract GIF URLs from avatars.css asynchronously
-    async function getValidGifURLs() {
-        try {
-            const [response, notShownResponse] = await Promise.all([
-                fetch('https://userpfp.github.io/UserPFP/import.css'),
-                fetch(''),
-            ]);
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>You Shouldn't Be Here!</title>
+    <style>
+        body {
+            margin: 10px;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
 
-            const [cssText, notShownText] = await Promise.all([
-                response.text(),
-                notShownResponse.text(),
-            ]);
+        .moving-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px; /* Adjust the spacing between avatars */
+            flex-wrap: nowrap; /* Prevent wrapping to the next line */
+            overflow-x: auto; /* Enable horizontal scrolling */
+            width: 100%;
+            max-width: auto; /* Adjust the maximum width of the container */
+            margin: 10px auto;
+        }
 
-            const gifRegex = /url\(["']?(https:\/\/.+?\.gif)["']?\)/g;
-            let match;
-            const gifURLs = [];
+        .moving-image-container {
+            border-radius: 50%; /* Create circular borders */
+            border: 4px solid #05fc00; /* Add a 3px wide border with green color */
+            background-color: #36393f;
+            width: 100px; /* Adjust the size of the avatars as needed */
+            height: 100px; /* Preserve the 1:1 aspect ratio */
+            overflow: hidden;
+            position: relative;
+            border-radius: 50%;
+        }
 
-            while ((match = gifRegex.exec(cssText)) !== null) {
-                const gifURL = match[1];
-                if (!isBadgeOrServerIcon(gifURL) && !notShownText.includes(gifURL)) {
-                    gifURLs.push(gifURL);
+        .moving-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
+        }
+    </style>
+</head>
+<body>
+    <script>
+        // Function to fetch and extract GIF URLs from avatars.css asynchronously
+        async function getValidGifURLs() {
+            try {
+                const [response, notShownResponse] = await Promise.all([
+                    fetch('https://userpfp.github.io/UserPFP/import.css'),
+                    fetch(''),
+                ]);
+
+                const [cssText, notShownText] = await Promise.all([
+                    response.text(),
+                    notShownResponse.text(),
+                ]);
+
+                const gifRegex = /url\(["']?(https:\/\/.+?\.gif)["']?\)/g;
+                let match;
+                const gifURLs = [];
+
+                while ((match = gifRegex.exec(cssText)) !== null) {
+                    const gifURL = match[1];
+                    if (!isBadgeOrServerIcon(gifURL) && !notShownText.includes(gifURL)) {
+                        gifURLs.push(gifURL);
+                    }
                 }
+
+                return gifURLs;
+            } catch (error) {
+                console.error('Error fetching data:', error);
+                return [];
             }
-
-            return gifURLs;
-        } catch (error) {
-            console.error('Error fetching data:', error);
-            return [];
         }
-    }
 
-    // Function to check if the given URL is a badge or server icon URL
-    function isBadgeOrServerIcon(url) {
-        return (
-            url.includes("profileBadges") ||
-            url.includes("profileBadge") ||
-            url.includes("badges") ||
-            url.includes("cdn.discordapp.com/icons/")
-        );
-    }
-
-    // Function to shuffle the array elements in random order
-    function shuffleArray(array) {
-        for (let i = array.length - 1; i > 0; i--) {
-            const j = Math.floor(Math.random() * (i + 1));
-            [array[i], array[j]] = [array[j], array[i]];
+        // Function to check if the given URL is a badge or server icon URL
+        function isBadgeOrServerIcon(url) {
+            return (
+                url.includes("profileBadges") ||
+                url.includes("profileBadge") ||
+                url.includes("badges") ||
+                url.includes("cdn.discordapp.com/icons/")
+            );
         }
-    }
 
-    // Function to add moving image elements to the container with error handling
-    function addMovingImagesToContainer(imageUrls, containerElement) {
-        for (const imageUrl of imageUrls) {
-            const imageContainer = document.createElement('div');
-            imageContainer.classList.add('moving-image-container');
-
-            const imageElement = document.createElement('img');
-            imageElement.classList.add('moving-image');
-
-            // Set the image source
-            imageElement.src = imageUrl;
-
-            // Add an error event listener to handle image load errors
-            imageElement.addEventListener('error', () => {
-                // Remove the container if an error occurs
-                containerElement.removeChild(imageContainer);
-
-                // Load a new GIF to replace the one that didn't load
-                const newIndex = Math.floor(Math.random() * gifURLs.length);
-                const newImageUrl = gifURLs[newIndex];
-                addMovingImagesToContainer([newImageUrl], containerElement);
-            });
-
-            imageContainer.appendChild(imageElement);
-            containerElement.appendChild(imageContainer);
+        // Function to shuffle the array elements in random order
+        function shuffleArray(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
         }
-    }
 
-    // Function to create the dynamic background
-    async function createDynamicBackground() {
-        const containerElement = document.createElement('div');
-        containerElement.classList.add('moving-container');
-        document.body.appendChild(containerElement);
+        // Function to add moving image elements to the container with error handling
+        function addMovingImagesToContainer(imageUrls, containerElement) {
+            for (const imageUrl of imageUrls) {
+                const imageContainer = document.createElement('div');
+                imageContainer.classList.add('moving-image-container');
 
-        const gifURLs = await getValidGifURLs();
-        shuffleArray(gifURLs); // Shuffle the GIF URLs in random order
+                const imageElement = document.createElement('img');
+                imageElement.classList.add('moving-image');
 
-        const numGifsToShow = 6; // Change this value to display a different number of GIFs at a time
-        const gifURLsToShow = gifURLs.slice(0, numGifsToShow);
+                // Set the image source
+                imageElement.src = imageUrl;
 
-        addMovingImagesToContainer(gifURLsToShow, containerElement);
-    }
+                // Add an error event listener to handle image load errors
+                imageElement.addEventListener('error', () => {
+                    // Remove the container if an error occurs
+                    containerElement.removeChild(imageContainer);
+                });
 
-    // Create the dynamic background asynchronously
-    createDynamicBackground();
-</script>
+                imageContainer.appendChild(imageElement);
+                containerElement.appendChild(imageContainer);
+            }
+        }
+
+        // Function to create the dynamic background
+        async function createDynamicBackground() {
+            const containerElement = document.createElement('div');
+            containerElement.classList.add('moving-container');
+            document.body.appendChild(containerElement);
+
+            const gifURLs = await getValidGifURLs();
+            shuffleArray(gifURLs); // Shuffle the GIF URLs in random order
+
+            const numGifsToShow = 8; // Change this value to display a different number of GIFs at a time
+            const gifURLsToShow = gifURLs.slice(0, numGifsToShow);
+
+            addMovingImagesToContainer(gifURLsToShow, containerElement);
+        }
+
+        // Create the dynamic background asynchronously
+        createDynamicBackground();
+    </script>
+</body>
+</html>
