--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="widget">
         <!-- Your widget content goes here -->
-        <iframe src="https://yeetov.github.io/website/widget.html" width="100%" height="140" frameborder="0"></iframe>
+<iframe src="https://raw.githubusercontent.com/yeetov/website/main/widget.html" width="100%" height="140" frameborder="0"></iframe>
     </div>
     <h2>What is UserPFP?</h2>
     <p>UserPFP is a client theme/plugin for Discord. It works with Vencord (Desktop), Vendetta (IOS + Android) and Aliucord (Android)</p>
