--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         /* Styling for the header */
         .header {
             background-color: #333;
-            color: #fff;
+            color: #ffffff; /* Text color changed to white */
             text-align: center;
             padding: 20px;
         }
@@ -19,14 +19,14 @@
     </style>
 </head>
 <body>
-    <div class="header">
+    <div class="header" style="background-color: #05fc00;"> <!-- Set inline background-color for the header -->
         <h1>USERPFP</h1>
     </div>
     <div class="widget">
         <!-- Your widget content goes here -->
-<iframe src="https://yeetov.github.io/website/widget.html" width="100%" height="140" frameborder="0"></iframe>
+        <iframe src="https://yeetov.github.io/website/widget.html" width="100%" height="140" frameborder="0"></iframe>
     </div>
     <h2>What is UserPFP?</h2>
-    <p>UserPFP is a client theme/plugin for Discord. It works with Vencord (Desktop), Vendetta (IOS + Android) and Aliucord (Android)</p>
+    <p>UserPFP is a client theme/plugin for Discord. It works with Vencord (Desktop), Vendetta (IOS + Android), and Aliucord (Android)</p>
 </body>
 </html>
