--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         /* Styling for the header */
         .header {
-            background-color: #333;
+            background-color: #05fc00; /* Header background color changed to green */
             color: #ffffff; /* Text color changed to white */
             text-align: center;
             padding: 20px;
@@ -14,12 +14,30 @@
         /* Styling for the widget */
         .widget {
             background-color: #eee;
-            padding: 10px;
+            padding: 20px; /* Increased padding for the widget */
+        }
+
+        /* Styling for text */
+        h1 {
+            font-size: 36px; /* Larger font size for the header */
+            font-family: Arial, sans-serif; /* Specify a font-family */
+            margin: 0; /* Remove margin to eliminate spacing */
+        }
+
+        h2 {
+            font-size: 24px; /* Font size for subheadings */
+            font-family: Arial, sans-serif; /* Specify a font-family */
+            margin-top: 20px; /* Add some space above the subheading */
+        }
+
+        p {
+            font-size: 18px; /* Font size for paragraphs */
+            font-family: Arial, sans-serif; /* Specify a font-family */
         }
     </style>
 </head>
 <body>
-    <div class="header" style="background-color: #05fc00;"> <!-- Set inline background-color for the header -->
+    <div class="header">
         <h1>USERPFP</h1>
     </div>
     <div class="widget">
