--- a/readme.html
+++ b/readme.html
@@ -46,9 +46,7 @@
     </div>
     <div class="readme">
         <!-- Your widget content goes here -->
-        <iframe src="https://yeetov.github.io/website/readme.html" width="100%" height="auto" frameborder="0"></iframe>
+        <iframe src="https://yeetov.github.io/website/readme.html" width="100%" height="1500" frameborder="0"></iframe>
     </div>
-    <!-- Mention the original creator -->
-    <p align="center">Original Creator: Beudave</p>
 </body>
 </html>
