--- a/staff.html
+++ b/staff.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        /* Define the outline and background styles */
+        .container {
+            border: 2px solid #000; /* Change the color and width as needed */
+            background-color: #f0f0f0; /* Change the background color as needed */
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <!-- Display the GIF with the provided URL -->
+        <img src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/7/789872551731527690.gif" alt="GIF">
+    </div>
+</body>
+</html>
 
