--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
             text-align: center;
             padding: 20px;
         }
-        
+
+        /* Styling for the navigation bar */
+        .navbar {
+            background-color: #333; /* Background color for the navigation bar */
+            overflow: hidden;
+        }
+
+        .navbar a {
+            float: right; /* Float the button to the right */
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
         /* Styling for the widget */
         .widget {
             background-color: #eee;
@@ -37,6 +52,9 @@
     </style>
 </head>
 <body>
+    <div class="navbar">
+        <a href="https://yeetov.github.io/website/staff.html">Staff</a>
+    </div>
     <div class="header">
         <h1>USERPFP</h1>
     </div>
