--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 </head>
 <body>
     <div class="navbar">
+        <a href="https://yeetov.github.io/website/index.html">Home</a>
         <a href="https://yeetov.github.io/website/staff.html">Staff</a>
     </div>
     <div class="header">
