--- a/index.html
+++ b/index.html
@@ -2,54 +2,7 @@
 <html>
 <head>
     <title>UserPFP</title>
-    <style>
-        /* Styling for the header */
-        .header {
-            background-color: #05fc00; /* Header background color changed to green */
-            color: #ffffff; /* Text color changed to white */
-            text-align: center;
-            padding: 20px;
-        }
-
-        /* Styling for the navigation bar */
-        .navbar {
-            background-color: #333; /* Background color for the navigation bar */
-            overflow: hidden;
-        }
-
-        .navbar a {
-            float: right; /* Float the button to the right */
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        /* Styling for the widget */
-        .widget {
-            background-color: #eee;
-            padding: 20px; /* Increased padding for the widget */
-        }
-
-        /* Styling for text */
-        h1 {
-            font-size: 36px; /* Larger font size for the header */
-            font-family: Arial, sans-serif; /* Specify a font-family */
-            margin: 0; /* Remove margin to eliminate spacing */
-        }
-
-        h2 {
-            font-size: 24px; /* Font size for subheadings */
-            font-family: Arial, sans-serif; /* Specify a font-family */
-            margin-top: 20px; /* Add some space above the subheading */
-        }
-
-        p {
-            font-size: 18px; /* Font size for paragraphs */
-            font-family: Arial, sans-serif; /* Specify a font-family */
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to an external CSS file -->
 </head>
 <body>
     <div class="navbar">
