--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div class="navbar">
         <a href="https://yeetov.github.io/website/index.html">Home</a>
         <a href="https://yeetov.github.io/website/staff.html">Staff</a>
+        <a href="https://yeetov.github.io/website/server.html">Discord</a>
     </div>
     <div class="header">
         <h1>USERPFP</h1>
