--- a/widget.html
+++ b/widget.html
@@ -28,7 +28,7 @@
 
         .moving-image-container {
             border-radius: 50%; /* Create circular borders */
-            border: 4px solid #05fc00; /* Add a 3px wide border with green color */
+            border: 4px solid #ffffff; /* Add a 3px wide border with green color */
             background-color: #36393f;
             width: 100px; /* Adjust the size of the avatars as needed */
             height: 100px; /* Preserve the 1:1 aspect ratio */
