--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>UserPFP</title>
     <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to an external CSS file -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap">
 </head>
 <body>
     <div class="navbar">
