--- a/server.html
+++ b/server.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>USERPFP Discord Server</title>
     <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to an external CSS file -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap">
+
 </head>
 <body>
     <div class="profile">
