--- a/widget.html
+++ b/widget.html
@@ -27,8 +27,7 @@
         }
 
         .moving-image-container {
-            border-radius: 50%; /* Create circular borders */
-            border: 4px solid #ffffff; /* Add a 3px wide border with green color */
+            border: 3px solid #ffffff; /* Add a 3px wide white border around the container */
             background-color: #36393f;
             width: 100px; /* Adjust the size of the avatars as needed */
             height: 100px; /* Preserve the 1:1 aspect ratio */
@@ -54,8 +53,8 @@
         async function getValidGifURLs() {
             try {
                 const [response, notShownResponse] = await Promise.all([
-                    fetch('https://userpfp.github.io/UserPFP/import.css'),
-                    fetch(''),
+                    fetch('https://userpfp.github.io/UserPFP/import.css'), // Add the correct URL here
+                    fetch('https://example.com/notshown.css'), // Replace with the actual URL
                 ]);
 
                 const [cssText, notShownText] = await Promise.all([
