--- a/server.html
+++ b/server.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>USERPFP Discord Server</title>
     <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to an external CSS file -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Uni+Sans:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 <body>
