--- a/staff.html
+++ b/staff.html
@@ -4,45 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Staff Page</title>
-    <style>
-        /* Global Styles */
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background: #151515; /* Background color */
-        }
-
-        /* Container Styles */
-        .container {
-            border: 2px solid transparent;
-            background-color: rgba(255, 255, 255, 0.1); /* Glass effect background */
-            padding: 20px;
-            text-align: center;
-            margin: 20% auto;
-            max-width: 400px;
-            transition: border 0.5s, background-color 0.5s;
-        }
-
-        .container:hover {
-            border: 2px solid #00f3ff; /* Border color on hover */
-            background-color: rgba(255, 255, 255, 0.2); /* Background color on hover */
-        }
-
-        /* Image Styles */
-        .avatar {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 243, 255, 0.5); /* Box shadow for the image */
-        }
-
-        /* Text Styles */
-        #userName {
-            color: #00f3ff; /* Text color */
-            margin-top: 10px;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Uni+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
