--- a/staff.html
+++ b/staff.html
@@ -9,8 +9,18 @@
 </head>
 <body>
     <div class="container">
-        <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/7/789872551731527690.gif" alt="User Avatar">
-        <div id="userName">FoxStorm1</div>
+        <div class="staff-member">
+            <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/7/789872551731527690.gif" alt="User Avatar">
+            <div class="username">FoxStorm1</div>
+        </div>
+        <div class="staff-member">
+            <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/4/406084422308331522.gif" alt="User Avatar">
+            <div class="username">Coolesding</div>
+        </div>
+        <div class="staff-member">
+            <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/8/853550207039832084.gif" alt="User Avatar">
+            <div class="username">Nexpid</div>
+        </div>
     </div>
 </body>
 </html>
