--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="https://yeetov.github.io/website/index.html">Home</a>
-        <a href="https://yeetov.github.io/website/staff.html">Staff</a>
-        <a href="https://yeetov.github.io/website/server.html">Discord</a>
+        <a href="index.html">Home</a>
+        <a href="staff.html">Staff</a>
+        <a href="server.html">Discord</a>
     </div>
     <div class="header">
         <h1>USERPFP</h1>
     </div>
     <div class="widget">
         <!-- Your widget content goes here -->
-        <iframe src="https://yeetov.github.io/website/widget.html" width="100%" height="140" frameborder="0"></iframe>
+        <iframe src="widget.html" width="100%" height="140" frameborder="0"></iframe>
     </div>
 </body>
 </html>
