--- a/widget.html
+++ b/widget.html
@@ -84,7 +84,7 @@
         function isBadgeOrServerIcon(url) {
             return (
                 url.includes("profileBadges") ||
-                url includes("profileBadge") ||
+                url.includes("profileBadge") ||
                 url.includes("badges") ||
                 url.includes("cdn.discordapp.com/icons/")
             );
