--- a/server.html
+++ b/server.html
@@ -5,6 +5,7 @@
     <title>USERPFP Discord Server</title>
     <link href="https://fonts.googleapis.com/css2?family=Uni+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to an external CSS file -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         /* Add a hover animation for the GitHub icon */
         .github-icon:hover {
