--- a/staff.html
+++ b/staff.html
@@ -6,6 +6,7 @@
     <title>Staff Page</title>
     <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to an external CSS file -->
     <link href="https://fonts.googleapis.com/css2?family=Uni+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
