--- a/staff.html
+++ b/staff.html
@@ -7,20 +7,35 @@
     <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to an external CSS file -->
     <link href="https://fonts.googleapis.com/css2?family=Uni+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <style>
+        .avatar {
+            width: 100px; /* Set the desired width */
+            height: 100px; /* Set the desired height */
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <div class="staff-member">
             <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/7/789872551731527690.gif" alt="User Avatar">
-            <div class="username">FoxStorm1</div>
+            <div class="staff-info">
+                <div class="username">FoxStorm1</div>
+                <p>A developer and the owner of UserPFP (remaking since idea was already there). A passion project (all the staff on the page are involved with UserPFP).</p>
+            </div>
         </div>
         <div class="staff-member">
             <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/4/406084422308331522.gif" alt="User Avatar">
-            <div class="username">Coolesding</div>
+            <div class "staff-info">
+                <div class="username">Coolesding</div>
+                <p>Developer who has helped out with CSS and coding lots, sort of second in charge but not because Asteria is. Shiggy fan.</p>
+            </div>
         </div>
         <div class="staff-member">
             <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/8/853550207039832084.gif" alt="User Avatar">
-            <div class="username">Nexpid</div>
+            <div class="staff-info">
+                <div class="username">Nexpid</div>
+                <p>Developer of the Vendetta plugin of UserPFP.</p>
+            </div>
         </div>
     </div>
 </body>
