--- a/staff.html
+++ b/staff.html
@@ -8,30 +8,65 @@
     <link href="https://fonts.googleapis.com/css2?family=Uni+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
-        .avatar {
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+
+        .staff-member {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 20px;
+        }
+
+        .avatar-container {
             width: 100px; /* Set the desired width */
             height: 100px; /* Set the desired height */
+            overflow: hidden;
+            border: 3px solid #7289DA; /* Discord color border */
+            border-radius: 50%; /* Circle border */
+        }
+
+        .avatar {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .staff-info {
+            text-align: center;
+            background: #7289DA; /* Discord color background */
+            color: #fff; /* White text color */
+            padding: 10px;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="staff-member">
-            <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/7/789872551731527690.gif" alt="User Avatar">
+            <div class="avatar-container">
+                <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/7/789872551731527690.gif" alt="User Avatar">
+            </div>
             <div class="staff-info">
                 <div class="username">FoxStorm1</div>
                 <p>A developer and the owner of UserPFP (remaking since idea was already there). A passion project (all the staff on the page are involved with UserPFP).</p>
             </div>
         </div>
         <div class="staff-member">
-            <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/4/406084422308331522.gif" alt="User Avatar">
-            <div class "staff-info">
+            <div class="avatar-container">
+                <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/4/406084422308331522.gif" alt="User Avatar">
+            </div>
+            <div class="staff-info">
                 <div class="username">Coolesding</div>
                 <p>Developer who has helped out with CSS and coding lots, sort of second in charge but not because Asteria is. Shiggy fan.</p>
             </div>
         </div>
         <div class="staff-member">
-            <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/8/853550207039832084.gif" alt="User Avatar">
+            <div class="avatar-container">
+                <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/8/853550207039832084.gif" alt="User Avatar">
+            </div>
             <div class="staff-info">
                 <div class="username">Nexpid</div>
                 <p>Developer of the Vendetta plugin of UserPFP.</p>
