--- a/staff.html
+++ b/staff.html
@@ -71,7 +71,7 @@
                 <p>Developer who has helped out with CSS and coding lots, sort of second in charge but not because Asteria is. Shiggy fan.</p>
             </div>
         </div>
-        <div class "staff-member">
+        <div class="staff-member">
             <div class="avatar-container">
                 <img class="avatar" src="https://raw.githubusercontent.com/UserPFP/img/main/Avatars/8/853550207039832084.gif" alt="User Avatar">
             </div>
