--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="widget">
         <!-- Your widget content goes here -->
-        <iframe src="widget.html" width="100%" height="140" frameborder="0"></iframe>
+        <iframe src="website/widget.html" width="100%" height="140" frameborder="0"></iframe>
     </div>
 </body>
 </html>
