--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <a href="server.html">Discord</a>
     </div>
     <div class="header">
-        <h1>USERPFP</h1>
+        <h1>UserPFP</h1>
     </div>
     <div class="widget">
         <!-- Your widget content goes here -->
-        <iframe src="website/widget.html" width="100%" height="140" frameborder="0"></iframe>
+        <iframe src="widget.html" width="100%" height="140" frameborder="0"></iframe>
     </div>
 </body>
 </html>
