--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="staff.html">Staff</a>
-        <a href="server.html">Discord</a>
-    </div>
+    <iframe src="navbar.html" width="100%" height="50" frameborder="0"></iframe>
     <div class="header">
         <h1>UserPFP</h1>
     </div>
