--- a/staff.html
+++ b/staff.html
@@ -52,6 +52,7 @@
     </style>
 </head>
 <body>
+    <iframe src="navbar.html" width="100%" height="50" frameborder="0"></iframe>
     <div class="container">
         <div class="staff-member">
             <div class="avatar-container">
@@ -68,7 +69,7 @@
             </div>
             <div class="staff-info">
                 <div class="username">Coolesding</div>
-                <p>Developer who has helped out with CSS and coding lots, sort of second in charge but not because Asteria is. Shiggy fan.</p>
+                <p>good looking mediocre css code</p>
             </div>
         </div>
         <div class="staff-member">
