--- a/staff.html
+++ b/staff.html
@@ -52,7 +52,11 @@
     </style>
 </head>
 <body>
-    <iframe src="navbar.html" width="100%" height="50" frameborder="0"></iframe>
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="staff.html">Staff</a>
+        <a href="server.html">Discord</a>
+    </div>
     <div class="container">
         <div class="staff-member">
             <div class="avatar-container">
