--- a/server.html
+++ b/server.html
@@ -20,6 +20,11 @@
     </style>
 </head>
 <body>
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="staff.html">Staff</a>
+        <a href="server.html">Discord</a>
+    </div>
     <div class="server-container">
         <img class="server-image" src="https://cdn.discordapp.com/discovery-splashes/1129784704267210844/bd091e64962f6ea55e749b1fcb90f36d.jpg?size=2048" alt="Server Banner">
         <div class="server-info">
