--- a/staff.html
+++ b/staff.html
@@ -53,9 +53,9 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="staff.html">Staff</a>
-        <a href="server.html">Discord</a>
+        <a href="https://userpfp.github.io/website/index.html">Home</a>
+        <a href="https://userpfp.github.io/website/staff.html">Staff</a>
+        <a href="https://userpfp.github.io/website/server.html">Discord</a>
     </div>
     <div class="container">
         <div class="staff-member">
