--- a/index.html
+++ b/index.html
@@ -5,6 +5,41 @@
     <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to an external CSS file -->
     <link href="https://fonts.googleapis.com/css2?family=Uni+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <style>
+        /* Center the navbar links */
+        .navbar {
+            text-align: center;
+            background-color: #333;
+            padding: 15px;
+            margin-bottom: 20px;
+        }
+
+        .navbar a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+        }
+
+        /* Center the header */
+        .header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        /* Style the widget container */
+        .widget {
+            margin: 0 auto;
+            max-width: 800px;
+        }
+
+        /* Style the iframe within the widget */
+        .widget iframe {
+            width: 100%;
+            height: 140px;
+            border: none;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
 <body>
     <div class="navbar">
