--- a/index.html
+++ b/index.html
@@ -23,7 +23,22 @@
         /* Center the header */
         .header {
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 10px; /* Reduce the margin to decrease the gap */
+        }
+
+        /* Style the widget container */
+        .widget {
+            margin: 0 auto;
+            max-width: 800px;
+            text-align: center; /* Center the content within the widget */
+        }
+
+        /* Style the iframe within the widget */
+        .widget iframe {
+            width: 100%;
+            height: 300px;
+            border: none;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
