--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         /* Style the widget container */
         .widget {
             margin: 0 auto;
-            max-width: 800px;
+            max-width: 100%; /* Set to the maximum available width */
             text-align: center; /* Center the content within the widget */
         }
 
@@ -38,7 +38,6 @@
             width: 100%;
             height: 300px;
             border: none;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
