--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>UserPFP</title>
     <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to an external CSS file -->
     <link href="https://fonts.googleapis.com/css2?family=Uni+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
+        /* Reset some default styles */
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Uni Sans', sans-serif;
+        }
+
         /* Center the navbar links */
         .navbar {
             text-align: center;
@@ -23,13 +31,13 @@
         /* Center the header */
         .header {
             text-align: center;
-            margin-bottom: 10px; /* Reduce the margin to decrease the gap */
+            margin-bottom: 20px; /* Increase the margin for a better separation */
         }
 
         /* Style the widget container */
         .widget {
             margin: 0 auto;
-            max-width: 100%; /* Set to the maximum available width */
+            max-width: 800px; /* Adjusted max-width for better readability */
             text-align: center; /* Center the content within the widget */
         }
 
