--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         .widget iframe {
             width: 100%;
             height: 300px;
-            border: none;
+            border: none; /* Removed the border */
         }
     </style>
 </head>
