--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             font-family: 'Uni Sans', sans-serif;
         }
 
-        /* Center the navbar links */
+        /* Style the navbar similar to server.html */
         .navbar {
             text-align: center;
-            background-color: #333;
+            background-color: #4a4d52;
             padding: 15px;
             margin-bottom: 20px;
         }
@@ -34,9 +34,8 @@
             margin-bottom: 20px; /* Increase the margin for a better separation */
         }
 
-        /* Style the widget container */
+        /* Style the widget container without margin */
         .widget {
-            margin: 0 auto;
             max-width: 800px; /* Adjusted max-width for better readability */
             text-align: center; /* Center the content within the widget */
         }
@@ -45,7 +44,7 @@
         .widget iframe {
             width: 100%;
             height: 300px;
-            border: none; /* Removed the border */
+            border: none;
         }
     </style>
 </head>
@@ -63,4 +62,5 @@
         <iframe src="https://userpfp.github.io/website/widget.html" width="100%" height="300" frameborder="0"></iframe>
     </div>
 </body>
-</html>
+    </html>
+    
