--- a/widget.html
+++ b/widget.html
@@ -17,13 +17,13 @@
         .moving-container {
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start; /* Adjusted to align items at the top */
             gap: 10px; /* Adjust the spacing between avatars */
             flex-wrap: nowrap; /* Prevent wrapping to the next line */
             overflow-x: auto; /* Enable horizontal scrolling */
             width: 100%;
             max-width: auto; /* Adjust the maximum width of the container */
-            margin: 10px auto;
+            margin: 0 auto; /* Set margin to 0 */
         }
 
         .moving-image-container {
