--- a/widget.html
+++ b/widget.html
@@ -17,13 +17,15 @@
         .moving-container {
             display: flex;
             justify-content: center;
-            align-items: flex-start; /* Adjusted to align items at the top */
+            align-items: center; /* Center items vertically */
             gap: 10px; /* Adjust the spacing between avatars */
             flex-wrap: nowrap; /* Prevent wrapping to the next line */
             overflow-x: auto; /* Enable horizontal scrolling */
             width: 100%;
             max-width: auto; /* Adjust the maximum width of the container */
-            margin: 0 auto; /* Set margin to 0 */
+            margin: 0 auto; /* Center the container horizontally */
+            position: absolute; /* Position the container absolutely */
+            top: 0; /* Position the container at the top of the page */
         }
 
         .moving-image-container {
